Added Python Files

--- a/D_Web_Development_1/01. Flask Framework.ipynb
+++ b/D_Web_Development_1/01. Flask Framework.ipynb
@@ -52,7 +52,70 @@
    },
    "outputs": [],
    "source": [
-    "%load hello.py"
+    "# %load hello.py\n",
+    "import json\n",
+    "from flask import Flask, render_template, url_for, redirect\n",
+    "from flask.views import MethodView\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "\n",
+    "@app.route('/')\n",
+    "def hello_world():\n",
+    "    \"\"\"Respond with a Hello World string.\"\"\"\n",
+    "    return 'Hello World!'\n",
+    "\n",
+    "\n",
+    "@app.route('/<name>')\n",
+    "def hello_name(name):\n",
+    "    \"\"\"Respond with a Hello name variable in a string with a link.\"\"\"\n",
+    "    return 'Hello <a href=\"{}\">{}! '.format(url_for('hello_marquee', name=name), name.capitalize())\n",
+    "\n",
+    "\n",
+    "@app.route('/<name>/')\n",
+    "def hello_marquee(name):\n",
+    "    \"\"\"\n",
+    "    Respond with a Hello name in HTML (with a <marquee>!).\n",
+    "\n",
+    "    Add all variables into context.\n",
+    "    Get template from /templates.\n",
+    "    Interpolate variables into the HTML.\n",
+    "    Return the result.\n",
+    "    \"\"\"\n",
+    "    context = {\n",
+    "        'name': name\n",
+    "    }\n",
+    "    return render_template('hello.html', **context)\n",
+    "\n",
+    "\n",
+    "@app.route('/error')\n",
+    "def error():\n",
+    "    \"\"\"Return nothing. Responds with the debugger screen.\"\"\"\n",
+    "    return\n",
+    "    # return redirect(url_for('hello_world'))\n",
+    "\n",
+    "\n",
+    "class API(MethodView):\n",
+    "    \"\"\"Class-based view demo.\"\"\"\n",
+    "\n",
+    "    def get(self, arg):\n",
+    "        \"\"\"Return arg data.\"\"\"\n",
+    "        data = {'arg': arg}\n",
+    "        return json.dumps(data)\n",
+    "\n",
+    "    def post(self):\n",
+    "        \"\"\"Return 'OK'.\"\"\"\n",
+    "        return 'OK'\n",
+    "\n",
+    "app.add_url_rule('/api/<arg>', view_func=API.as_view('api'))\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(\n",
+    "        debug=True,\n",
+    "        host=\"localhost\",\n",
+    "        port=8000,\n",
+    "    )\n"
    ]
   },
   {
@@ -260,7 +323,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -342,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Request object\n",
+    "## 1.3 Request object\n",
     "\n",
     "There are other methods and objects available to import from Flask. One worth noting is the [request](http://flask.pocoo.org/docs/0.10/quickstart/#the-request-object) object.\n",
     "\n",
