--- a/D_Web_Development_1/02. Template Engine - Jinja2.ipynb
+++ b/D_Web_Development_1/02. Template Engine - Jinja2.ipynb
@@ -19,7 +19,21 @@
    },
    "outputs": [],
    "source": [
-    "%load templates/hello.html"
+    "# %load templates/hello.html\n",
+    "<!doctype html>\n",
+    "<title>Hello from Flask</title>\n",
+    "\n",
+    "{% if name %}\n",
+    "\n",
+    "  <marquee><h1>Hello {{ name }}!</h1></marquee>\n",
+    "  {# <p>Marquee ftw!</p> #}\n",
+    "  <small>Do not try this at home!</small>\n",
+    "\n",
+    "{% else %}\n",
+    "\n",
+    "  <h1>Hello World!</h1>\n",
+    "\n",
+    "{% endif %}"
    ]
   },
   {
