--- a/D_Web_Development_2/01. Introduction to Django.ipynb
+++ b/D_Web_Development_2/01. Introduction to Django.ipynb
@@ -10,11 +10,11 @@
     "\n",
     "This set of notebooks assumes that you already have a good knowledge of Python. Basic knowledge of using Flask or any other Python web development framework is also recommended.\n",
     "\n",
-    "[Django](https://www.djangoproject.com/) is a high level framework that wants to make web development faster by including many extras. Code that you would otherwise need to be repeatedly rewritten in most projects are already built as part of the framework. This is why you'd often read that it has \"batteries included\". For many other things, there are django packages by other developers available to easily plug into your application. With the way django apps are structured, it encourages reusability. These are just some of the things that help make developing with Django fast.\n",
+    "[Django](https://www.djangoproject.com/) is a high level framework that wants to make web development faster by including many extras. Code that you would otherwise need to repeatedly write in most projects are already built as part of the framework. This is why you'd often read that it has \"batteries included\". For many other things, there are django packages available to easily plug into your application. With the way django apps are structured, it encourages reusability. These are just some of the things that help make developing with Django fast.\n",
     "\n",
     "The learning curve will be steep so a good knowledge of Python before learning Django would be appropriate. Knowledge of Flask or any other framework is recommended for familiarity with basic web development. We'll try to cover everything in between but there's a lot more to learn so getting the basics out of the way would let us learn about Django itself faster.\n",
     "\n",
-    "This introduction takes a top-down approach, explaining the \"big idea\" before writing any code. Other tutorials are available if you like learning by coding first. We recommend the Django girls tutorial because it doesn't assume anything and takes good care to explain every step.\n",
+    "This introduction takes a top-down approach, explaining the \"big idea\" before writing any code. Other tutorials are available if you like learning by coding first. We recommend the [Django girls tutorial](http://tutorial.djangogirls.org/en/index.html) because it doesn't assume anything and takes good care to explain every step.\n",
     "\n",
     "## Django Project Structure\n",
     "\n",
@@ -38,7 +38,7 @@
     "]\n",
     "```\n",
     "\n",
-    "There is another folder with the name of your project with a different set of files. Specifically, it has __`settings.py`__, __`urls.py`__ and __`wsgi.py`__. We'll talk about the details later but these are most of what you can expect.\n",
+    "There is another folder with the name of your project with a different set of files. Specifically, it has __`settings.py`__, __`urls.py`__ and __`wsgi.py`__. We'll talk about the details of the project package folder later but these are most of what you can expect.\n",
     "\n",
     "* models.py\n",
     "* views.py\n",
@@ -60,7 +60,7 @@
     "  │   ├── models.py\n",
     "  │   ├── views.py\n",
     "  │   ├── urls.py\n",
-    "  ├── google/\n",
+    "  ├── google/  # project package folder\n",
     "  │   ├── __init__.py\n",
     "  │   ├── settings.py\n",
     "  │   ├── urls.py\n",
@@ -83,26 +83,72 @@
     "\n",
     "Manually following all of this is tedious and error-prone. The good thing is that Django has management commands to help us with this repetitive task. It will be good to first learn some of the more commonly used management commands.\n",
     "\n",
-    "When Django is installed, a script that can be run from anywhere is also installed. This is the `django-admin` script that lets you run Django management commands.\n",
+    "When Django is installed, it also installs a script that can be run from anywhere. This is the `django-admin` script that lets you run Django management commands.\n",
     "\n",
+    "### Install Django\n",
+    "\n",
+    "First, let's install Django."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install django"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### New Project\n",
     "\n",
-    "To create a new project:\n",
+    "To create a new project:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!django-admin startproject google ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This prepares a __project folder__ with the minimum required files and default settings. The project folder may be the current folder if a `.` was placed after the name of the project like in our example. If not, Django prepares a folder with that name. Inside this folder will be the __project package folder__ with the same name containing the `settings.py`, `wsgi.py` and `urls.py`. We'll learn more about them later but for now, it's good to know we have these files and we know where to find them.\n",
     "\n",
-    "```\n",
-    "django-admin startproject google\n",
-    "```\n",
-    "\n",
-    "This prepares a new project folder with the minimum required files and default settings. After using this command, you'll see a __`manage.py`__ file in the project folder. It's just a wrapper to the __`django-admin`__ script but makes sure that we are referring to this project. After creating a project, use the __`manage.py`__ script.\n",
+    "After using this command, you'll see a __`manage.py`__ file in the project folder. It's just a wrapper for the __`django-admin`__ script but makes sure that we are referring to this project. After creating a project, use the __`manage.py`__ script of that project instead of `django-admin`.\n",
     "\n",
     "### Run Server\n",
     "\n",
-    "To serve a project locally:\n",
-    "\n",
-    "```\n",
-    "python manage.py runserver\n",
-    "```\n",
-    "\n",
+    "To serve a project locally:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!python manage.py runserver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This starts a local server so we can run our project locally. Whenever we want to see the changes we made or to just browse the site, we do this. We can also have a separate tab running this in the shell and it will auto-reload whenever it detects changes in the project. Sometimes, it takes a while for it to detect changes.\n",
     "\n",
     "```\n",
@@ -112,32 +158,101 @@
     "\n",
     "### Run Migrations\n",
     "\n",
-    "To migrate and apply to the database any changes made to models:\n",
-    "\n",
-    "```\n",
-    "python manage.py migrate\n",
-    "```\n",
-    "\n",
+    "To migrate and apply to the database any changes made to models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mOperations to perform:\u001b[0m\r\n",
+      "\u001b[1m  Apply all migrations: \u001b[0msessions, admin, auth, contenttypes, account\r\n",
+      "\u001b[36;1mRunning migrations:\u001b[0m\r\n",
+      "  Rendering model states...\u001b[32;1m DONE\u001b[0m\r\n",
+      "  Applying account.0001_initial...\u001b[32;1m OK\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python manage.py migrate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This runs migration scripts that translate models into the database tables. Whenever you install a new app from a 3rd party package or something made by you, the app's models haven't been applied to the database yet. The migrations may be needed before the module works properly.\n",
     "\n",
     "### New App\n",
     "\n",
-    "To create a new app:\n",
-    "\n",
-    "```\n",
-    "python manage.py startapp search\n",
-    "```\n",
-    "\n",
+    "To create a new app:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!python manage.py startapp search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!python manage.py startapp account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This creates a new app within our current project. It creates the folder and prepares some files that you'll most likely use. New apps must be registered in the __`INSTALLED_APPS`__ list in __`settings.py`__.\n",
     "\n",
     "### Create Migrations\n",
     "\n",
-    "To create migration scripts:\n",
-    "\n",
-    "```\n",
-    "python manage.py makemigrations\n",
-    "```\n",
-    "\n",
+    "To create migration scripts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mMigrations for 'account':\u001b[0m\r\n",
+      "  \u001b[1m0001_initial.py\u001b[0m:\r\n",
+      "    - Create model Profile\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python manage.py makemigrations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This detects any changes and creates scripts that translate new models or changes to existing models into scripts that the database can understand. Scripts aren't executed, only prepared and placed in a __`migrations/`__ folder. The actual execution of the script is done by the __`migrate`__ command.\n",
     "\n",
     "The scripts are dependent on each other and preserve their order. It would be best to know exactly what you're doing before tampering with them or use the other related management commands.\n",
@@ -150,10 +265,24 @@
     "\n",
     "Make a super user account:\n",
     "\n",
-    "```\n",
-    "python manage.py createsuperuser\n",
-    "```\n",
-    "\n",
+    "(This commend needs to be ran in the shell. It asks for an input that doesn't work from within Jupyter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!python manage.py createsuperuser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Django comes built in with an admin functionality for your models. As the developer of the project, you can manage all your models from this admin page. This means that you can see and test your models even before creating views and controllers. You can view and modify users and change permissions from there. After creating models registering them to the admin is the next logical step and the superuser is the key to using it.\n",
     "\n",
     "### Others\n",
@@ -163,29 +292,35 @@
     "\n",
     "## Workflow\n",
     "\n",
-    "After learning about what to expect from Django and managing Django projects, the workflow typically looks like the summary below:\n",
-    "\n",
+    "After learning about what to expect from Django and managing Django projects using the commands, the workflow typically looks like the summary below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
-    "# Create a project and apply migrations\n",
+    "# Create a project\n",
     "django-admin startproject project_name  # edit some settings\n",
-    "python manage.py migrate\n",
+    "\n",
+    "# Apply migrations\n",
+    "python manage.py migrate  # some built-in modules have migrations\n",
     "\n",
     "# Create a superuser\n",
     "python manage.py createsuperuser  # gets your input for logging in to admin/\n",
     "\n",
-    "\n",
-    "# Run in its own tab\n",
+    "# Start the local server\n",
     "python manage.py runserver\n",
     "\n",
-    "\n",
     "# Creating new apps\n",
-    "python manage.py startapp app_name  # add app to INSTALLED_APPS, make a model\n",
+    "python manage.py startapp account  # add app to INSTALLED_APPS, make a model\n",
+    "\n",
+    "# edit models.py and view in admin/\n",
     "\n",
     "# Whenever an app's model is changed\n",
     "python manage.py makemigrations  # them migrate and view in admin/\n",
     "\n",
     "# edit views.py and urls.py\n",
-    "\n",
     "\n",
     "# Run in its own tab whenever you want to test code\n",
     "python manage.py shell\n",
