--- a/D_Web_Development_2/02. Settings.ipynb
+++ b/D_Web_Development_2/02. Settings.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# [Settings.py](https://docs.djangoproject.com/en/dev/topics/settings/)\n",
     "\n",
-    "Before going straight to the code, this is a good time to mention that it will be good to familiarize yourself with the settings. The __`settings.py`__ file is where Django stores project configuration. There are a lot of available settings within Django. Some third party packges require some variables to be set for them to work properly. Most of these settings have defaults that don't need to be changed, some you might want to change, and some you'll need to change. Knowing how to configure your project can save you from some bugs and help you deploy your project.\n",
+    "Before going straight to the code, this is a good time to mention that it will be good to familiarize yourself with the settings. The __`settings.py`__ file is where Django stores project configuration. You can find it in the __project package folder__. There are a lot of available settings within Django. Some third party packges require some variables to be set for them to work properly. Most of these settings have defaults that don't need to be changed, some you might want to change, and some you'll need to change. Knowing how to configure your project can save you from common problems and help you deploy your project.\n",
     "\n",
-    "It's a Python script so it needs to follow the proper syntax. You can set values in any way that's acceptable in Python. It can import values from other modules so settings can be structured in a way that you can have a `development.py` and `production.py` that both inherit from `base.py` but have their own environment-specific settings. If you'll be using a different filename besides the default `settings.py`, change the default value for `DJANGO_SETTINGS_MODULE` in `wsgi.py` which refers to 'project_name.settings'.\n",
+    "It's a Python script so it needs to follow the proper syntax. You can set values in any way that's acceptable in Python. It can import values from other modules so settings can be structured in a way that you can have a `development.py` and `production.py` that both inherit from `base.py` but have their own environment-specific settings. If you'll be using a different file besides the default `settings.py`, change the default value for `DJANGO_SETTINGS_MODULE` in `wsgi.py` which refers to 'project_name.settings'.\n",
     "\n",
     "Refer to the [documentation](https://docs.djangoproject.com/en/dev/ref/settings/) for a complete reference on the settings. Below are some of the common ones you'll often encounter.\n",
     "\n",
@@ -51,7 +51,9 @@
     "]\n",
     "```\n",
     "\n",
-    "Django looks for templates in several ways. One of Django's behaviors is to look for them in a __`templates/`__ folder within an app. This behavior can be turned off by setting `'APP_DIRS': False` in the `TEMPLATES` list in the `settings.py` file. Another way is by specifying a list of paths in the `DIRS` key and Django will include those in its search. It's up to you to decide where to put templates and the configuration allows you to do what you want.\n",
+    "Django looks for templates in several ways. One of Django's behaviors is to look for them in a __`templates/`__ folder within an app. This behavior can be turned off by setting `'APP_DIRS': False` in the `TEMPLATES` list in the `settings.py` file. But in our project, we'll keep it on.\n",
+    "\n",
+    "Another way is by specifying a list of paths in the `DIRS` key and Django will include those paths in its search. It's up to you to decide where to put templates and the configuration allows you to do what you want.\n",
     "\n",
     "## `DATABASES`\n",
     "\n",
@@ -64,7 +66,7 @@
     "}\n",
     "```\n",
     "\n",
-    "The default database configuration uses sqlite and the file is save in a db.sqlite file in your project directory.\n",
+    "The default database configuration uses `sqlite` and the file is saved in a db.sqlite file in your project directory.\n",
     "\n",
     "## `STATIC_ROOT`\n",
     "\n",
@@ -85,7 +87,23 @@
     "## `DEBUG`\n",
     "\n",
     "When `True`, detailed error pages are shown. Never deploy with this turned on. When this is set to `False`, `ALLOWED_HOSTS` must be set.\n",
-    "\n"
+    "\n",
+    "## `ALLOWED_HOSTS`\n",
+    "\n",
+    "This is a list of host/domain names that our site can serve. It works as one of Django's security features. During development, there may be a need to change the value of `DEBUG` to `False`. When this happens, `ALLOWED_HOSTS` must be set to `['localhost']`.\n",
+    "\n",
+    "Let's take a look at our __`settings.py`__ file and then we're ready to start building things with Django."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%load google/settings.py"
    ]
   }
  ],
